# 3DPrinting11

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: box.STL
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/src/: Application.cpp  Application.h  MeshGroup.cpp  gcodeExport.cpp  mesh.cpp
app/src/main/cpp/src/communication/: CommandLine.cpp  CommandLine.h
app/src/main/cpp/src/utils/: logoutput.cpp  logoutput.h  socket.cpp
app/src/main/java/com/mukesh/drawingview/example/: DaYinJieMian.java  JianBiHua.java  MoXingKu.java  SheZhi.java  UPicture.java  USBDiskReceiver.java  ZhuJieMian.java  ZhuanYeMoShi.java
app/src/main/java/usbcontroler/: USBDiskState.java
app/src/main/java/utils/: SCMDataReceiveListener.java  SerialPortUtils.java
app/src/main/res/layout/: activity_dayinjiemian.xml  activity_jianbihua.xml  activity_moxingku.xml  activity_shezhi.xml  activity_upicture.xml  activity_zhuanyemoshi.xml  activity_zhujiemian.xml  layout_grid_item.xml  newusb.xml
app/src/main/res/values/: strings.xml
drawingview/src/main/java/com/mukesh/: DrawingView.java
